--- a/src/globals.css
+++ b/src/globals.css
@@ -4,8 +4,17 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 1em;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.svg-inline--fa{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.5em;
+  margin: auto;
 }
